--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
             </figure>
             <div id="menu">
                 <nav id="menuIzquierdo">
-                    <ul id="opcionesIzquierdo">
+                    <ul id="opciones">
                         <li><a href="./index.html#productos">Quienes Somos</a></li>
                         <li><a href="./index.html#productos">¿Por que Elegirnos?</a></li>
                         <li><a href="./index.html#propuesta">Propuesta Educativa</a></li>
@@ -147,7 +147,7 @@
                     <li><a href="https://www.instagram.com" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
                     <li><a href="https://www.facebook.com" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
                     <li><a href="https://www.Linkedin.com" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                    <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube fa-xl" style="color: #FC7300;"></i></a>
+                    <li><a href="https://www.youtube.com" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
                     </li>
                 </ul>
             </div>
